manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advent-static
  labels:
    app: advent
    role: static
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: advent
      role: static
  template:
    metadata:
      labels:
        app: advent
        role: static
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: advent
                  role: static
              topologyKey: kubernetes.io/hostname
      containers:
        - name: advent-static
          image: ghcr.io/valerauko/personal-advent:1.1.0
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
