manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: advent
  labels:
    app: advent
    role: static
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: advent
    role: static
