manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: advent
  labels:
    app: advent
    role: static
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
      - advent.dekiru.tech
  rules:
    - host: advent.dekiru.tech
      http:
        paths:
          - backend:
              serviceName: advent
              servicePort: http
